# msiq-metrics

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  color_usage.py
msiq/: __init__.py  color.py  diagnostics.py  distances.py  masks.py  metrics.py  moments.py  visualization.py
tests/: test_basic.py
